--- a/app/css/style.css
+++ b/app/css/style.css
@@ -117,7 +117,7 @@ body {
     z-index: 200000;
 }
 
-@media only (max-width: 767px) {
+@media (max-width: 767px) {
     body {
         width: 100vw;
         overflow: auto;
@@ -165,7 +165,7 @@ body {
     }
 
     body canvas:last-child {
-        width: 100%;
-        height: 100vh;
+        width: 100% !important;
+        height: 100vh !important;
     }
 }
